--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,go
 .vscode/launch.json
+
+media/
+
